--- a/examples/uc_engine_hello_world/uc_engine_hello_world.csproj
+++ b/examples/uc_engine_hello_world/uc_engine_hello_world.csproj
@@ -29,7 +29,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
-    <UseDotNetNativeToolchain>false</UseDotNetNativeToolchain>
+    <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
   <PropertyGroup>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
@@ -71,11 +71,14 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.2</Version>
+      <Version>6.2.8</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.UI.Xaml">
+      <Version>2.1.190405004</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\build\build.vcxproj">
+    <ProjectReference Include="..\..\build\unique_creator\build.vcxproj">
       <Project>{23f057fa-8518-4d9c-a57d-4809080f3234}</Project>
       <Name>UniqueCreator</Name>
     </ProjectReference>
