added directory to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /build/x64
 /build/packages
 /build/Generated Files
+/build/unique_creator/.vs
 /build/unique_creator/Generated Files
 /build/UniqueCreatorx64/
 /build/unique_creator/UniqueCreatorx64/
