reworked, changed the namespace, put more order in files

--- a/examples/uc_engine_hello_world/uc_engine_hello_world.csproj
+++ b/examples/uc_engine_hello_world/uc_engine_hello_world.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\..\build\packages\uc-tools-msbuild-tasks.1.0.31\build\uc-tools-msbuild-tasks.props" Condition="Exists('..\..\build\packages\uc-tools-msbuild-tasks.1.0.31\build\uc-tools-msbuild-tasks.props')" />
-  <Import Project="..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.9\build\uc-tools-graphics-gpu-shader-compiler.props" Condition="Exists('..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.9\build\uc-tools-graphics-gpu-shader-compiler.props')" />
+  <Import Project="..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.11\build\uc-tools-graphics-gpu-shader-compiler.props" Condition="Exists('..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.11\build\uc-tools-graphics-gpu-shader-compiler.props')" />
   <Import Project="..\..\build\packages\uc-tools-graphics-gpu-pipeline-compiler.1.0.32\build\uc-tools-graphics-gpu-pipeline-compiler.props" Condition="Exists('..\..\build\packages\uc-tools-graphics-gpu-pipeline-compiler.1.0.32\build\uc-tools-graphics-gpu-pipeline-compiler.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -39,8 +39,8 @@
   </PropertyGroup>
   <ImportGroup Label="ExtensionSettings">
     <Import Project="..\..\build\packages\uc-tools-graphics-gpu-pipeline-compiler.1.0.32\build\uc-tools-graphics-gpu-pipeline-compiler.targets" Condition="Exists('..\..\build\packages\uc-tools-graphics-gpu-pipeline-compiler.1.0.32\build\uc-tools-graphics-gpu-pipeline-compiler.targets')" />
-    <Import Project="..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.8\build\uc-tools-graphics-gpu-shader-compiler.targets" Condition="Exists('..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.87\build\uc-tools-graphics-gpu-shader-compiler.targets')" />
-    <Import Project="..\..\build\packages\uc-tools-msbuild-tasks.1.0.31\build\uc-tools-msbuild-tasks.targets" Condition="Exists('..\..\build\packages\uc-tools-msbuild-tasks.1.0.31\build\uc-tools-msbuild-tasks.targets')" />
+    <Import Project="..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.11\build\uc-tools-graphics-gpu-shader-compiler.targets" Condition="Exists('..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.11\build\uc-tools-graphics-gpu-shader-compiler.targets')" />
+    <Import Project="..\..\build\packages\uc-tools-msbuild-tasks.1.0.32\build\uc-tools-msbuild-tasks.targets" Condition="Exists('..\..\build\packages\uc-tools-msbuild-tasks.1.0.32\build\uc-tools-msbuild-tasks.targets')" />
   </ImportGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -67,19 +67,15 @@
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
-
   <ItemGroup>
     <VertexSharpShader Include="triangle_vertex.hlsl" />
   </ItemGroup>
-
   <ItemGroup>
     <ComputeSharpShader Include="compute_cs.hlsl" />
   </ItemGroup>
-
   <ItemGroup>
     <PixelSharpShader Include="triangle_pixel.hlsl" />
   </ItemGroup>
-
   <ItemGroup>
     <RootSharpSignature Include="default_graphics_signature_cs.hlsl">
       <EntryPointName>MyRS1</EntryPointName>
@@ -106,14 +102,14 @@
       <Version>2.1.190405004</Version>
     </PackageReference>
     <PackageReference Include="uc-tools-msbuild-tasks">
-      <Version>1.0.31</Version>
+      <Version>1.0.32</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\build\unique_creator\build.vcxproj">
-      <Project>{23f057fa-8518-4d9c-a57d-4809080f3234}</Project>
-      <Name>UniqueCreator</Name>
-    </ProjectReference>
+    <Reference Include="UniqueCreator.Graphics.Gpu, Version=255.255.255.255, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\build\UniqueCreatorx64\Release\build\UniqueCreator.Graphics.Gpu.winmd</HintPath>
+    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
@@ -125,10 +121,10 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\..\build\packages\uc-tools-graphics-gpu-pipeline-compiler.1.0.32\build\uc-tools-graphics-gpu-pipeline-compiler.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\build\uc-tools-graphics-gpu-pipeline-compiler.1.0.32\build\uc-tools-graphics-gpu-pipeline-compiler.props'))" />
     <Error Condition="!Exists('..\..\build\packages\uc-tools-graphics-gpu-pipeline-compiler.1.0.32\build\uc-tools-graphics-gpu-pipeline-compiler.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\build\uc-tools-graphics-gpu-pipeline-compiler.1.0.32\build\uc-tools-graphics-gpu-pipeline-compiler.targets'))" />
-    <Error Condition="!Exists('..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.9\build\uc-tools-graphics-gpu-shader-compiler.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\build\uc-tools-graphics-gpu-shader-compiler.1.0.9\build\uc-tools-graphics-gpu-shader-compiler.props'))" />
-    <Error Condition="!Exists('..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.9\build\uc-tools-graphics-gpu-shader-compiler.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\build\uc-tools-graphics-gpu-shader-compiler.1.0.9\build\uc-tools-graphics-gpu-shader-compiler.targets'))" />
-    <Error Condition="!Exists('..\..\build\packages\uc-tools-msbuild-tasks.1.0.31\build\uc-tools-msbuild-tasks.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\uc-tools-msbuild-tasks.1.0.31\build\build\uc-tools-msbuild-tasks.props'))" />
-    <Error Condition="!Exists('..\..\build\packages\uc-tools-msbuild-tasks.1.0.31\build\uc-tools-msbuild-tasks.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\uc-tools-msbuild-tasks.1.0.31\build\build\uc-tools-msbuild-tasks.targets'))" />
+    <Error Condition="!Exists('..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.11\build\uc-tools-graphics-gpu-shader-compiler.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\build\uc-tools-graphics-gpu-shader-compiler.1.0.11\build\uc-tools-graphics-gpu-shader-compiler.props'))" />
+    <Error Condition="!Exists('..\..\build\packages\uc-tools-graphics-gpu-shader-compiler.1.0.11\build\uc-tools-graphics-gpu-shader-compiler.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\build\uc-tools-graphics-gpu-shader-compiler.1.0.11\build\uc-tools-graphics-gpu-shader-compiler.targets'))" />
+    <Error Condition="!Exists('..\..\build\packages\uc-tools-msbuild-tasks.1.0.32\build\uc-tools-msbuild-tasks.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\uc-tools-msbuild-tasks.1.0.32\build\build\uc-tools-msbuild-tasks.props'))" />
+    <Error Condition="!Exists('..\..\build\packages\uc-tools-msbuild-tasks.1.0.32\build\uc-tools-msbuild-tasks.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\uc-tools-msbuild-tasks.1.0.32\build\build\uc-tools-msbuild-tasks.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets. !-->
