--- a/examples/uc_engine_hello_world/uc_engine_hello_world.csproj
+++ b/examples/uc_engine_hello_world/uc_engine_hello_world.csproj
@@ -100,7 +100,7 @@
       <Version>6.2.8</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.1.190405004</Version>
+      <Version>2.1.190405004.1</Version>
     </PackageReference>
     <PackageReference Include="uc-tools-msbuild-tasks">
       <Version>1.0.32</Version>
