--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ################################################################################
 
 /.vs
+/bin
 /build/.vs
 /build/x64
 /build/packages
