--- a/package.nuspec.template
+++ b/package.nuspec.template
@@ -3,7 +3,7 @@
   <metadata>
     <id>uc-graphics-winrt</id>
     <version>@version</version>
-    <title>uc-data-military-mechanic</title>
+    <title>uc-graphics-winrt</title>
     <authors>Stefan Dyulgerov</authors>
     <owners>kingofthebongo2009</owners>
     <licenseUrl>http://opensource.org/licenses/MS-PL</licenseUrl>
@@ -28,14 +28,14 @@
     <file src = "bin\win-64\Release\UniqueCreator.Graphics.Gpu.dll"     target = "lib\native\UniqueCreator.Graphics.Gpu.dll" />
     <file src = "bin\win-64\Release\UniqueCreator.Graphics.Gpu.pdb"     target = "lib\native\UniqueCreator.Graphics.Gpu.pdb" />
     <file src = "bin\win-64\Release\UniqueCreator.Graphics.Gpu.winmd"   target = "lib\native\UniqueCreator.Graphics.Gpu.winmd" />
-    <file src = "bin\win-64\Release\UniqueCreator.Graphics.Gpu.pri"   target = "lib\native\UniqueCreator.Graphics.Gpu.pri" />
+    <file src = "bin\win-64\Release\UniqueCreator.Graphics.Gpu.pri"     target = "lib\native\UniqueCreator.Graphics.Gpu.pri" />
 
     <file src = "build\uc-graphics-winrt-native.props"                  target = "build\native\uc-graphics-winrt-native.props" />
     <file src = "build\uc-graphics-winrt-native.targets"                target = "build\native\uc-graphics-winrt-native.targets" />
 
     <file src = "bin\win-64\Release\UniqueCreator.Graphics.Gpu.dll"     target = "lib\uap\UniqueCreator.Graphics.Gpu.dll" />
     <file src = "bin\win-64\Release\UniqueCreator.Graphics.Gpu.pdb"     target = "lib\uap\UniqueCreator.Graphics.Gpu.pdb" />
-    <file src = "bin\win-64\Release\UniqueCreator.Graphics.Gpu.pri"   target = "lib\uap\UniqueCreator.Graphics.Gpu.pri" />
+    <file src = "bin\win-64\Release\UniqueCreator.Graphics.Gpu.pri"     target = "lib\uap\UniqueCreator.Graphics.Gpu.pri" />
 
     <file src = "build\uc-graphics-winrt-uap.props"                     target = "build\uap\uc-graphics-winrt-native.props" />
     <file src = "build\uc-graphics-winrt-uap.targets"                   target = "build\uap\uc-graphics-winrt-native.targets" />
