--- a/package.nuspec.template
+++ b/package.nuspec.template
@@ -26,6 +26,8 @@
   <files>
 
     <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.dll"     target = "lib\native\UniqueCreator.Graphics.Gpu.dll" />
+    <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.lib"     target = "lib\native\UniqueCreator.Graphics.Gpu.lib" />
+    <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.exp"     target = "lib\native\UniqueCreator.Graphics.Gpu.exp" />
     <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.pdb"     target = "lib\native\UniqueCreator.Graphics.Gpu.pdb" />
     <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.winmd"   target = "lib\native\UniqueCreator.Graphics.Gpu.winmd" />
     <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.pri"     target = "lib\native\UniqueCreator.Graphics.Gpu.pri" />
@@ -34,6 +36,8 @@
     <file src = "build\uc-graphics-winrt-native.targets"                 target = "build\native\uc-graphics-winrt.targets" />
 
     <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.dll"     target = "lib\uap\UniqueCreator.Graphics.Gpu.dll" />
+    <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.exp"     target = "lib\uap\UniqueCreator.Graphics.Gpu.exp" />
+    <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.lib"     target = "lib\uap\UniqueCreator.Graphics.Gpu.lib" />
     <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.pdb"     target = "lib\uap\UniqueCreator.Graphics.Gpu.pdb" />
     <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.pri"     target = "lib\uap\UniqueCreator.Graphics.Gpu.pri" />
     <file src = "bin\win-x64\Release\UniqueCreator.Graphics.Gpu.winmd"   target = "lib\uap\UniqueCreator.Graphics.Gpu.winmd" />
